--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,2 @@
-<div>
-  <h1><strong>About</strong></h1>
-</div>
-
-<div>
-  <P>
-    ながのＣＡＫＥは全国発送可能なケーキ屋さんです。<br>
-    お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-    様々なバリエーションをご用意しております。<br>
-    また、全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-    ぜひご注文ください。
-  </P>
-</div>
+<h1>Public::Homes#about</h1>
+<p>Find me in app/views/public/homes/about.html.erb</p>
