Revert "Revert 46 nabe"

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,20 +1,2 @@
-<div class="main-visual">
-  <div class="main-visual-content">
-    <p class="main-visual-text">
-      ようこそ、ながのCAKEへ！<br />
-      このサイトは、ケーキ販売のECサイトになります。<br />
-      会員でない方も商品の閲覧はできますが、<br />
-      購入には会員登録が必要になります。
-    </p>
-  </div>
-</div>
-
-<main>
-  <section class="new-item">
-    <h2>新着商品</h2>
-    <div class ="new-item-box">
-      <!--items一覧のRender-->
-    </div>
-  </section>
-  <%= link_to 'すべての商品を見る >' %>
-</main>
+<h1>Public::Homes#top</h1>
+<p>Find me in app/views/public/homes/top.html.erb</p>
