--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to 'マイページ' %></li>
           <li><%= link_to '商品一覧' %></li>
           <li><%= link_to 'カート' %></li>
-          <li><%= link_to 'ログアウト' %></li>
+          <li><%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %></li>
           <li><%= link_to 'About' %></li>
           <li><%= link_to '商品一覧' %></li>
           <li><%= link_to '新規登録' %></li>
