--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,2 +1,41 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<h1><%= @customer.first_name @customer.last_name %>さんの会員情報</h1>
+<table>
+<%= form_with model:@customer, local: true do |f| %>
+  <tr>
+    <td>会員id</td>
+    <td><%= @customer.id %></td>
+  </tr>
+  <tr>
+    <td>氏名</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>フリガナ</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>郵便番号</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>住所</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>電話番号</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>メールアドレス</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>会員ステータス</td>
+    <td></td>
+  </tr>
+<% end %>
+</table>
+
+<%= f.submit '変更を保存' %>
