--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h1>会員一覧</h1>
+<table class='table table-hover'>
+  <thead class='thead-light'>
+    <tr>
+      <th>会員id</th>
+      <th>氏名</th>
+      <th>メールアドレス</th>
+      <th>ステータス</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @customers.each do |customer| %>
+      <tr>
+        <td><%= customer.id %></td>
+        <td><%= link_to customer.name, admin_customers_show_path %></td>
+        <td><%= customer.email %></td>
+        <td><%= customer.is_deleted %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
