--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,41 +1,40 @@
-<h1><%= @customer.first_name @customer.last_name %>さんの会員情報</h1>
-<table>
+<h1><%= @customer.first_name %>さんの会員情報</h1>
 <%= form_with model:@customer, local: true do |f| %>
-  <tr>
-    <td>会員id</td>
-    <td><%= @customer.id %></td>
-  </tr>
-  <tr>
-    <td>氏名</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>フリガナ</td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>郵便番号</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>住所</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>電話番号</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>メールアドレス</td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>会員ステータス</td>
-    <td></td>
-  </tr>
+  <table>
+    <tr>
+      <td>会員id</td>
+      <td><%= @customer.id %></td>
+    </tr>
+    <tr>
+      <td>氏名</td>
+      <td> <%= f.text_field :first_name %></td>
+      <td> <%= f.text_field :last_name %></td>
+    </tr>
+    <tr>
+      <td>フリガナ</td>
+      <td><%= f.text_field :first_name_kana %></td>
+      <td><%= f.text_field :last_name_kana %></td>
+    </tr>
+    <tr>
+      <td>郵便番号</td>
+      <td><%= f.text_field :postal_code %></td>
+    </tr>
+    <tr>
+      <td>住所</td>
+      <td><%= f.text_field :adresses %></td>
+    </tr>
+    <tr>
+      <td>電話番号</td>
+      <td><%= f.text_field :telephone_number %></td>
+    </tr>
+    <tr>
+      <td>メールアドレス</td>
+      <td><%= f.text_field :email %></td>
+    </tr>
+    <tr>
+      <td>会員ステータス</td>
+      <td><%= f.text_field :is_deleted %></td>
+    </tr>
+  </table>
+  <%= f.submit '変更を保存' %>
 <% end %>
-</table>
-
-<%= f.submit '変更を保存' %>
