--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -12,7 +12,7 @@
     <% @customers.each do |customer| %>
       <tr>
         <td><%= customer.id %></td>
-        <td><%= link_to customer.name, admin_customers_show_path %></td>
+        <td><%= link_to customer.telephone_number, admin_customer_path(customer) %></td>
         <td><%= customer.email %></td>
         <td><%= customer.is_deleted %></td>
       </tr>
