--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,8 +1,16 @@
 <div>
-  <h2>商品一覧</h2>
-  <p>（全<%= @items.count %>件）</p>
-  <p>商品画像＆URL<%= attachment_image_tag @item, :image, format: "jpg", size: "300x300", fallback: "img/no_image.jpg" %></p>
-  <p>商品名</p>
-  <p>値段¥</p>
+  <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
+  <table class='table table-hover table-inverse'>
+      <% @items.each do |item| %>
+        <tr>
+          <td><%= link_to item_path(item) do %>
+            <%= attachment_image_tag(item, :image, :fill, 100, 100, fallback: "img/no_image.jpg") %>
+            <% end %>
+          </td>
+          <td><%= item.name, item_path(item) %></td>
+          <td>￥<%= item.price %></td>
+        </tr>
+      <% end %>
+  </table>
 </div>
 <!--< paginate >-->
