--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,23 +1,31 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-  		<h1>配送先編集</h1>
-  		<%= form_with model:@address,local:true do |f| %>
-        <div class="form-edit">
-          <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
-          <%= f.text_field :postal_code %>
-        </div>
-        <div class="form-edit">
-          <%= f.label :address %>
-          <%= f.text_field :address %>
-        </div>
-        <div class="form-edit">
-          <%= f.label :name, "宛名" %>
-          <%= f.text_field :name %>
-        </div>
-        <div class="form-edit">
-          <%= f.submit "変更内容を保存", class: "btn btn-success" %>
-        </div>
-      <% end %>
+  		<h3>配送先編集</h3>
+  		<table class='table'>
+    		<%= form_with model:@address,local:true do |f| %>
+          <tr>
+            <td class="form-edit">
+            <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
+            <%= f.text_field :postal_code %>
+            </td>
+          </tr>
+          <tr>
+            <td class="form-edit">
+              <%= f.label :address, "住所" %>
+              <%= f.text_field :address %>
+            </td>
+          </tr>
+          <tr>
+            <td class="form-edit">
+              <%= f.label :name, "宛名" %>
+              <%= f.text_field :name %>
+            </td>
+            <td class="form-edit">
+              <%= f.submit "変更内容を保存", class: "btn btn-success" %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
   </div>
 </div>
