--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,1 +1,30 @@
-<%= button_to "全て削除", destroy_all_cart_items_path, method: :delete %>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+        <h2>ショッピングカート</h2><p><%= button_to "全て削除", destroy_all_cart_items_path, method: :delete %></p>
+  		<table class='table'>
+  		  <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th></th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+  		    <% @item.cart_items.each do |cart_item| %>
+    		    <tr>
+    		        <td><%= item.image_id %><%= item.name %></td>
+    		        <td><%= (item.price*1.1).floor %></td>
+    		        <td><%= cart_item.amount %></td>
+    		        <td><%= (item.price*1.1*cart_item.amount).floor %></td>
+    		        <td><%= link_to '削除する', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-primary"%></td>
+    		    </tr>
+  		    <% end %>
+		    </tbody>
+      </table>
+    </div>
+  </div>
+</div>
