--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,16 +1,20 @@
-<div>
-  <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
-  <table class='table table-hover table-inverse'>
-      <% @items.each do |item| %>
-        <tr>
-          <td><%= link_to item_path(item) do %>
-            <%= attachment_image_tag(item, :image, :fill, 100, 100, fallback: "img/no_image.jpg") %>
-            <% end %>
-          </td>
-          <td><%= item.name, item_path(item) %></td>
-          <td>￥<%= item.price %></td>
-        </tr>
-      <% end %>
-  </table>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+      <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
+      <table class='table table-hover table-inverse'>
+          <% @items.each do |item| %>
+            <tr>
+              <td><%= link_to item_path(item) do %>
+                <%= attachment_image_tag(item, :image, :fill, 100, 100, fallback: "img/no_image.jpg") %>
+                <% end %>
+              </td>
+              <td><%= item.name %></td>
+              <td>￥<%= item.price %></td>
+            </tr>
+          <% end %>
+      </table>
+    </div>
+  </div>
 </div>
 <!--< paginate >-->
