--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @customer.first_name %>さんの会員情報</h1>
-<%= form_with model:@customer, local: true do |f| %>
+<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h1>
+<%= form_with model:@customer,url: admin_customer_path(@customer), local: true do |f| %>
   <table>
     <tr>
       <td>会員id</td>
@@ -7,13 +7,13 @@
     </tr>
     <tr>
       <td>氏名</td>
-      <td> <%= f.text_field :first_name %></td>
       <td> <%= f.text_field :last_name %></td>
+      <td> <%= f.text_field :first_name %></td>
     </tr>
     <tr>
       <td>フリガナ</td>
-      <td><%= f.text_field :first_name_kana %></td>
       <td><%= f.text_field :last_name_kana %></td>
+      <td><%= f.text_field :first_name_kana %></td>
     </tr>
     <tr>
       <td>郵便番号</td>
@@ -21,7 +21,7 @@
     </tr>
     <tr>
       <td>住所</td>
-      <td><%= f.text_field :adresses %></td>
+      <td><%= f.text_field :address %></td>
     </tr>
     <tr>
       <td>電話番号</td>
@@ -36,5 +36,5 @@
       <td><%= f.text_field :is_deleted %></td>
     </tr>
   </table>
-  <%= f.submit '変更を保存' %>
+  <%= f.submit '変更を保存', class: "btn btn-success" %>
 <% end %>
