--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,44 @@
-<h1>Admin::Customers#show</h1>
-<p></p>
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-11 offset-md-1'>
+      <table class='table'>
+        <tr>
+          <td>会員id</td>
+          <td><%= @customer.id %></td>
+        </tr>
+        <tr>
+          <td>氏名</td>
+          <td> <%= @customer.last_name %></td>
+          <td> <%= @customer.first_name %></td>
+        </tr>
+        <tr>
+          <td>フリガナ</td>
+          <td><%= @customer.last_name_kana %></td>
+          <td><%= @customer.first_name_kana %></td>
+        </tr>
+        <tr>
+          <td>郵便番号</td>
+          <td><%= @customer.postal_code %></td>
+        </tr>
+        <tr>
+          <td>住所</td>
+          <td><%= @customer.address %></td>
+        </tr>
+        <tr>
+          <td>電話番号</td>
+          <td><%= @customer.telephone_number %></td>
+        </tr>
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= @customer.email %></td>
+        </tr>
+        <tr>
+          <td>会員ステータス</td>
+          <td><%= @customer.is_deleted %></td>
+        </tr>
+      </table>
+      <%= link_to "編集する", edit_admin_customer_path %>
+      <%= link_to "注文履歴一覧を見る", admin_order_path(@customer) %>
+    </div>
+  </div>
+</div>
