--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,47 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<h1>注文履歴詳細</h1>
+<table class='table'>
+  <tr>
+    <td>購入者</td>
+    <td><%= @order.customer %></td>
+  </tr>
+  <tr>
+    <td>注文日</td>
+    <td><%= @order. %></td>
+  </tr>
+  <tr>
+    <td>配送先</td>
+    <td><%= @order.postal_code %><%= @order.address%><%= @order.name %></td>
+  </tr>
+  <tr>
+    <td>支払い方法</td>
+    <td><%= @order.payment_method %></td>
+  </tr>
+  <tr>
+    <td>注文ステータス</td>
+    <td><%= @order.status %></td>
+  </tr>
+</table>
+
+
+<table class='table'>
+  <thead>
+    <tr>
+      <th>商品名</th>
+      <th>単価（税込）</th>
+      <th>数量</th>
+      <th>小計</th>
+      <th>制作ステータス</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% each.@order_detail do |order_detail| %>
+      <tr>
+        <td><%= order_detail.item.name %></td>
+        <td><%= order_detail.item.price*1.1 %></td>
+        <td><%= order_detail.amount %></td>
+        <td><%= order_detail.item.price*@order_detail.amount*1.1 %></td>
+        <td><%= order_detail.making_status %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
