--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<h3>ジャンル編集</h3>
+  		<table class='table'>
+    		<%= form_with model: [ :admin, @genre ], local: true do |f| %>
+          <tr>
+            <td class="form-edit">
+              <%= f.label :name, "ジャンル名" %>
+              <%= f.text_field :name %>
+            </td>
+            <td class="form-edit">
+              <%= f.submit "変更を保存", class: "btn btn-success" %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+  </div>
+</div>
