--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -13,9 +13,9 @@
 				商品説明:
 				<%= @item.introduction %>
 			</p>
-			<!--<p class="genre">
+			<p class="genre">
 				ジャンル:
-				<= @genre.genre_id %>放置-->
+				<%= @item.genre.name %>
 			</p>
 			<p class="price">
 				税抜き価格（税込価格):
