--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,46 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<diV class="container admin-item-new">
+
+  <h3>ジャンル一覧・追加</h3>
+<!--商品画像選択 -->
+<table>
+<%= form_with model: [ :admin, @genre ], local: true do |f| %>
+</div>
+
+<!--商品登録 -->
+
+
+  <div class="row">
+    <table class="field">
+      <label ="name">ジャンル新規登録</label>
+      <%= f.text_field :name %>
+    </table>
+    
+  <!-- 投稿機能　-->
+    <div class="sbmit">
+      <%= f.submit "投稿" %>
+    </div>
+   </div>
+<% end %>
+</div>
+
+      <!--商品一覧-->
+      <table class="table">
+
+<thead>
+    <tr>
+    <th>ジャンル</th>
+    </tr>
+</thead>
+
+        <% @genres.each do |genre| %>
+        <tbody>
+          <tr>
+            <!--ジャンル-->
+            <td><%= genre.name %></td>
+            <td class="text-center"><%= link_to '編集する', edit_admin_genre_path(genre.id) %></td>
+          </tr>
+        </tbody>
+
+        <% end %>
+      </table>
+</table>
