--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-8 offset-md-1'>
-        <h2>ショッピングカート</h2><p><%= button_to "全て削除", destroy_all_cart_items_path, method: :delete %></p>
+        <h2>ショッピングカート</h2><p><%= button_to "全て削除", cart_items_destroy_all_path, method: :delete %></p>
   		<table class='table'>
   		  <thead>
           <tr>
@@ -14,7 +14,7 @@
           </tr>
         </thead>
         <tbody>
-  		    <% @item.cart_items.each do |cart_item| %>
+  		    <% @items.cart_items.each do |cart_item| %>
     		    <tr>
     		        <td><%= item.image_id %><%= item.name %></td>
     		        <td><%= (item.price*1.1).floor %></td>
