--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,40 +1,48 @@
-<h1><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h1>
-<%= form_with model:@customer,url: admin_customer_path(@customer), local: true do |f| %>
-  <table>
-    <tr>
-      <td>会員id</td>
-      <td><%= @customer.id %></td>
-    </tr>
-    <tr>
-      <td>氏名</td>
-      <td> <%= f.text_field :last_name %></td>
-      <td> <%= f.text_field :first_name %></td>
-    </tr>
-    <tr>
-      <td>フリガナ</td>
-      <td><%= f.text_field :last_name_kana %></td>
-      <td><%= f.text_field :first_name_kana %></td>
-    </tr>
-    <tr>
-      <td>郵便番号</td>
-      <td><%= f.text_field :postal_code %></td>
-    </tr>
-    <tr>
-      <td>住所</td>
-      <td><%= f.text_field :address %></td>
-    </tr>
-    <tr>
-      <td>電話番号</td>
-      <td><%= f.text_field :telephone_number %></td>
-    </tr>
-    <tr>
-      <td>メールアドレス</td>
-      <td><%= f.text_field :email %></td>
-    </tr>
-    <tr>
-      <td>会員ステータス</td>
-      <td><%= f.text_field :is_deleted %></td>
-    </tr>
-  </table>
-  <%= f.submit '変更を保存', class: "btn btn-success" %>
-<% end %>
+<div class='container'>
+  <div class='row'>
+    <h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h4>
+  </div>
+  <div>
+    <div class='col-md-10 offset-md-1'>
+      <%= form_with model:@customer,url: admin_customer_path(@customer), local: true do |f| %>
+        <table class='table table-borderless'>
+          <tr>
+            <td>会員id</td>
+            <td><%= @customer.id %></td>
+          </tr>
+          <tr>
+            <td>氏名</td>
+            <td> <%= f.text_field :last_name %></td>
+            <td> <%= f.text_field :first_name %></td>
+          </tr>
+          <tr>
+            <td>フリガナ</td>
+            <td><%= f.text_field :last_name_kana %></td>
+            <td><%= f.text_field :first_name_kana %></td>
+          </tr>
+          <tr>
+            <td>郵便番号</td>
+            <td><%= f.text_field :postal_code %></td>
+          </tr>
+          <tr>
+            <td>住所</td>
+            <td><%= f.text_field :address %></td>
+          </tr>
+          <tr>
+            <td>電話番号</td>
+            <td><%= f.text_field :telephone_number %></td>
+          </tr>
+          <tr>
+            <td>メールアドレス</td>
+            <td><%= f.text_field :email %></td>
+          </tr>
+          <tr>
+            <td>会員ステータス</td>
+            <td><label><%= f.radio_button :is_deleted, "false" %>有効</label><label><%= f.radio_button :is_deleted, "true" %>無効</label></td>
+          </tr>
+        </table>
+        <%= f.submit '変更を保存', class: "btn btn-success" %>
+      <% end %>
+    </div>
+  </div>
+</div>
