--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,9 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-9 offset-md-3 mx-auto'>
-      <h1>会員一覧</h1>
+    <h4>会員一覧</h4>
+  </div>
+  <div class='row'>
+    <div class='col-md-12'>
       <table class='table table-hover'>
         <thead class='thead-light'>
           <tr>
@@ -17,7 +19,13 @@
               <td><%= customer.id %></td>
               <td><%= link_to customer.last_name, admin_customer_path(customer) %></td>
               <td><%= customer.email %></td>
-              <td><%= customer.is_deleted %></td>
+              <td>
+                <% if customer.is_deleted == false %>
+                有効
+                <% else %>
+                退会
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
