--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -3,7 +3,7 @@
     <div class='col'>
       <h3 class='table-secondary'>配送先登録/一覧</h3>
         <table class='table'>
-          <%= form_with model:@address,local:true do |f| %>
+          <%= form_with model:@address, url: addresses_path(@address), local:true do |f| %>
             <tr class="form-postal_code row">
               <td>
                 <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
