--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,30 +1,29 @@
 <div class='container'>
-  <div class='row'>
-    <div class='col-md-8 offset-md-1'>
-        <h2>ショッピングカート</h2><p><%= button_to "全て削除", cart_items_destroy_all_path, method: :delete %></p>
-  		<table class='table'>
-  		  <thead>
-          <tr>
-            <th>商品名</th>
-            <th>単価（税込）</th>
-            <th>数量</th>
-            <th>小計</th>
-            <th></th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-        <tbody>
-  		    <% @items.cart_items.each do |cart_item| %>
-    		    <tr>
-    		        <td><%= item.image_id %><%= item.name %></td>
-    		        <td><%= (item.price*1.1).floor %></td>
-    		        <td><%= cart_item.amount %></td>
-    		        <td><%= (item.price*1.1*cart_item.amount).floor %></td>
-    		        <td><%= link_to '削除する', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-primary"%></td>
-    		    </tr>
-  		    <% end %>
-		    </tbody>
-      </table>
-    </div>
+  <div class='row justify-content-between'>
+    <h3 class='col-4'>ショッピングカート</h3><p class='col-4'><%= link_to "全て削除", cart_items_destroy_all_path, method: :delete %></p>
   </div>
+
+	<table class='table'>
+	  <thead>
+      <tr>
+        <th>商品名</th>
+        <th>単価（税込）</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th></th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+	    <% @cart_items.each do |cart_item| %>
+		    <tr>
+		        <td><%= attachment_image_tag(cart_item.item, :image, :fill, 45, 45, fallback: "img/no_image.jpg") %><%= cart_item.item.name %></td>
+		        <td><%= (cart_item.item.price*1.1).floor %></td>
+		        <td><%= cart_item.amount %></td>
+		        <td><%= (cart_item.item.price*1.1*cart_item.amount).floor %></td>
+		        <td><%= link_to '削除する', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-outline-primary"%></td>
+		    </tr>
+	    <% end %>
+    </tbody>
+  </table>
 </div>
