#11 退会機能終了

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -56,7 +56,7 @@
     <div class="row mt-3">
         <div class="col">
             <%= f.submit "編集内容を保存", class: "w-25 btn btn-success" %>
-            <%= link_to '退会する', orders_path, class: "ml-5 btn btn-danger" %>
+            <%= link_to '退会する', customers_unsubscribe_path, class: "ml-5 btn btn-danger" %>
         </div>
     </div>
 
