--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,38 +1,46 @@
 
+<!--<div class=container>-->
   <header class=“shadow-sm”>
-  <nav class=“navbar navbar-expand-lg navbar-light”>
-    <div class=“container”>
-      <div class=“collapse navbar-collapse” id=“navbarNavDropdown”>
-        <ul class=“navbar-nav ml-auto”>
-        <% if customer_signed_in? %>
-          <li class=“nav-item”>
-            <%= link_to "マイページ", my_page_path(current_customer.id), class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-            <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-            <%= link_to "カート", cart_items_path, class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
-          </li>
-        <% else %>
-          <li class=“nav-item”>
-          <%= link_to "アバウト", about_path, class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-          <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-            <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-dark' %>
-          </li>
-          <li class=“nav-item”>
-            <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
-          </li>
-        <% end %>
-        </ul>
+    <nav class=“navbar navbar-expand-lg navbar-light”>
+      <div class=“container”>
+        <div class=“collapse navbar-collapse” id=“navbarNavDropdown”>
+          <div class=“navbar-brand”>
+            <%= link_to root_path do %>
+            <%= image_tag 'img/nagano_logo.png', size: "400x100" %>
+            <% end %>
+          </div>
+
+          <ul class=“navbar-nav ml-auto”>
+          <% if customer_signed_in? %>
+            <li class=“nav-item”>
+              <%= link_to "マイページ", my_page_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+              <%= link_to "商品一覧", items_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+              <%= link_to "カート", cart_items_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'btn btn-outline-secondary' %>
+            </li>
+          <% else %>
+            <li class=“nav-item”>
+            <%= link_to "アバウト", about_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+            <%= link_to "商品一覧", items_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+              <%= link_to "新規登録", new_customer_registration_path, class: 'btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+              <%= link_to "ログイン", new_customer_session_path, class: 'btn btn-outline-secondary' %>
+            </li>
+          <% end %>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
+<!--</div>-->
