--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,7 +3,7 @@
 		<div>
 			<h3 class='row'>注文情報入力</h3>
 
-				<%= form_with model: @order, local: true do |f| %>
+				<%= form_with model: @order, url: orders_confirm_path, local: true do |f| %>
 					<!--支払方法-->
 					<div class='row'>
 						<p>支払い方法</p>
