注文機能作成中

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -60,7 +60,7 @@
         <td>
           <strong>支払方法</strong>
         </td>
-        <td>クレジットカード</td>
+        <td><%= @order.payment_method %></td>
       </tr>
 
       <tr>
