--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<h1>注文履歴一覧</h1>
+<table>
+  <thead>
+    <tr>
+      <th>購入日時</th>
+      <th>購入者</th>
+      <th>注文個数</th>
+      <th>注文ステータス</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= @order.each do |order| %>
+    <tr>
+      <td><%= order.created_at %></td>
+      <td><%= order.name %></td>
+      <td><%=%></td>
+      <td><%= order.status%></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
