--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -6,7 +6,7 @@
   </tr>
   <tr>
     <td>注文日</td>
-    <td><%= @order. %></td>
+    <td><%= @order.created_at %></td>
   </tr>
   <tr>
     <td>配送先</td>
@@ -39,7 +39,7 @@
         <td><%= order_detail.item.name %></td>
         <td><%= order_detail.item.price*1.1 %></td>
         <td><%= order_detail.amount %></td>
-        <td><%= order_detail.item.price*@order_detail.amount*1.1 %></td>
+        <td><%= order_detail.item.price*order_detail.amount*1.1 %></td>
         <td><%= order_detail.making_status %></td>
       </tr>
     <% end %>
