--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -28,8 +28,10 @@
               </td>
             </tr>
           <% end %>
+          <%= paginate @customer %>
         </tbody>
       </table>
+
     </div>
   </div>
 </div>
