--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,6 @@
 <h1>注文履歴一覧</h1>
-<table>
-  <thead>
+<table class='table'>
+  <thead class='thead-light'>
     <tr>
       <th>購入日時</th>
       <th>購入者</th>
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <%= @order.each do |order| %>
+    <%= @orders.each do |order| %>
     <tr>
       <td><%= order.created_at %></td>
       <td><%= order.name %></td>
