--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,12 +21,15 @@
 				税抜き価格（税込価格):
 				<%= @item.price %>円<%= (@item.price*1.1).floor %>円 
 			</p>
-			<p class ="is_active">販売ステータス:</p>
-				<% if @item.is_active %>
+			
+			<p class ="is_active">
+				販売ステータス:
+				<% if @item.is_active %></p>
 				<p>販売中</p>
 				<% else %>
 				<p>売り切れ</p>
 				<% end %>
+			
 		</div>
 		<div class="edit-btn">
 		<%= link_to '編集する', edit_admin_item_path(@item), class:"btn btn-outline-primary" %>
