--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -17,7 +17,7 @@
     
   <!-- 投稿機能　-->
     <div class="sbmit">
-      <%= f.submit "投稿" %>
+      <%= f.submit "投稿", class: "btn btn-success" %>
     </div>
    </div>
 <% end %>
@@ -37,7 +37,7 @@
           <tr>
             <!--ジャンル-->
             <td><%= genre.name %></td>
-            <td class="text-center"><%= link_to '編集する', edit_admin_genre_path(genre.id) %></td>
+            <td class="text-center"><%= link_to '編集する', edit_admin_genre_path(genre.id), class: "ml-5 btn btn-success" %></td>
           </tr>
         </tbody>
 
