--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -67,12 +67,21 @@
         <td>
           <strong>お届け先</strong>
         </td>
-      <td><%= @order.address %></td>
+      <td><%= @order.postal_code %><%= @order.address %></td>
       <td><%= @order.name %></td>
       </tr>
     </table>
   </div>
   <div class="row">
-    <%= link_to '注文を確定する', orders_complete_path, class: "btn btn-success" %>
+    <!--<= link_to '注文を確定する', orders_path, method: :post, class: "btn btn-success" %>-->
+
+    <%= form_with model:@order, url:orders_path, local:true do |f| %>
+      <%= f.hidden_field :payment_method, :value => @order.payment_method %>
+      <%= f.hidden_field :address, :value => @order.address %>
+      <%= f.hidden_field :name, :value => @order.name %>
+      <%= f.hidden_field :postal_code, :value => @order.postal_code %>
+      <%= f.hidden_field :sum, :value => @sum %>
+      <%= f.submit %>
+    <% end %>
   </div>
 </div>
