--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,62 +1,59 @@
+<nav class="navbar navbar-expand-lg">
+    <div class=“navbar-brand”>
+        <%= link_to root_path do %>
+        <%= image_tag 'img/nagano_logo.png', size: "400x100" %>
+        <% end %>
+    </div>
 
-<!--<div class=container>-->
-  <header class=“shadow-sm”>
-    <nav class=“navbar navbar-expand-lg navbar-light”>
-      <div class=“container”>
-        <div class=“collapse navbar-collapse” id=“navbarNavDropdown”>
-          <div class=“navbar-brand”>
-            <%= link_to root_path do %>
-            <%= image_tag 'img/nagano_logo.png', size: "400x100" %>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-navi" aria-controls="bs-navi" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="d-flex justify-content-around collapse navbar-collapse" id="bs-navi">
+        <ul class=“navbar-nav”>
+        <% if customer_signed_in? %>
+            <li class=“nav-item”>
+                <%= link_to "マイページ", my_page_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "商品一覧", items_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "カート", cart_items_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <% elsif admin_signed_in? %>
+            <li class=“nav-item”>
+                <%= link_to "商品一覧", admin_items_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "会員一覧", admin_customers_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "注文履歴一覧", admin_root_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "ジャンル一覧", admin_genres_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <% else %>
+            <li class=“nav-item”>
+                <%= link_to "アバウト", about_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "商品一覧", items_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "新規登録", new_customer_registration_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
+            <li class=“nav-item”>
+                <%= link_to "ログイン", new_customer_session_path, class: 'mr-5 nav-link btn btn-outline-secondary' %>
+            </li>
             <% end %>
-          </div>
-
-          <ul class=“navbar-nav ml-auto”>
-          <% if customer_signed_in? %>
-            <li class=“nav-item”>
-              <%= link_to "マイページ", my_page_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "商品一覧", items_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "カート", cart_items_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'btn btn-outline-secondary' %>
-            </li>
-          <% elsif admin_signed_in? %>
-            <li class=“nav-item”>
-              <%= link_to "商品一覧", admin_items_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "会員一覧", admin_customers_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "注文履歴一覧", admin_order_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "ジャンル一覧", admin_genres_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'btn btn-outline-secondary' %>
-            </li>
-          <% else %>
-            <li class=“nav-item”>
-            <%= link_to "アバウト", about_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-            <%= link_to "商品一覧", items_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "新規登録", new_customer_registration_path, class: 'btn btn-outline-secondary' %>
-            </li>
-            <li class=“nav-item”>
-              <%= link_to "ログイン", new_customer_session_path, class: 'btn btn-outline-secondary' %>
-            </li>
-          <% end %>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-<!--</div>-->
+        </ul>
+    </div>
+</nav>
