--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -2,7 +2,7 @@
 <table class='table'>
   <tr>
     <td>購入者</td>
-    <td><%= @order.customer %></td>
+    <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
   </tr>
   <tr>
     <td>注文日</td>
@@ -10,7 +10,7 @@
   </tr>
   <tr>
     <td>配送先</td>
-    <td><%= @order.postal_code %><%= @order.address%><%= @order.name %></td>
+    <td><%= @order.postal_code %><%= @order.address %><%= @order.name %></td>
   </tr>
   <tr>
     <td>支払い方法</td>
@@ -34,7 +34,7 @@
     </tr>
   </thead>
   <tbody>
-    <% each.@order_detail do |order_detail| %>
+    <% @order_details.each do |order_detail| %>
       <tr>
         <td><%= order_detail.item.name %></td>
         <td><%= order_detail.item.price*1.1 %></td>
