--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,19 @@
-<div>
-    <h1><strong>About</strong></h1>
-</div>
+<div class="container">
+  <div class='row mx-auto'　style="width: 200px;">
+    <div class="col-lg-12">
+      <h4 class='title text-center'>About</h4>
+    </div>
+  </div>
 
-<div>
-  <P>
-    ながのＣＡＫＥは全国発送可能なケーキ屋さんです。<br>
-    お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-    様々なバリエーションをご用意しております。<br>
-    また、全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-    ぜひご注文ください。
-  </P>
+  <div class='row mx-auto'　style="width: 200px;">
+    <p class="col-12 text-center">ながのCakeは全国発送可能なケーキ屋さんです。<br>
+      お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+      様々なバリエーションをご用意しております。<br>
+      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+      ぜひご注文ください。
+    </p>
+  </div>
+  <div class="col-12 text-center">
+    <%= image_tag "img/top_visual.jpeg", :size => '500x300' %>
+  </div>
 </div>
