--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,20 +1,26 @@
 <div class='container'>
-  <div class='row'>
-    <div class='col-md-8 offset-md-1'>
-      <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
-      <table class='table table-hover table-inverse'>
-          <% @items.each do |item| %>
-            <tr>
-              <td><%= link_to item_path(item) do %>
-                <%= attachment_image_tag(item, :image, :fill, 100, 100, fallback: "img/no_image.jpg") %>
-                <% end %>
-              </td>
-              <td><%= item.name %></td>
-              <td>￥<%= item.price %></td>
-            </tr>
-          <% end %>
+  <div class ='row'>
+    <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
+  </div>
+  <div class='row mx-auto'　style="width: 200px;">
+    <% @items.each do |item| %>
+      <table class='col-md-3'>
+        <tr>
+          <td><%= link_to item_path(item) do %>
+            <%= attachment_image_tag(item, :image, :fill, 250, 250, fallback: "img/no_image.jpg") %>
+            <% end %><br>
+          </td>
+        </tr>
+        <tr>
+          <th><%= item.name %></th>
+        </tr>
+        <tr>
+          <th>￥<%= item.price %></th>
+        </tr>
       </table>
-    </div>
+    <% end %>
+  </div>
+  <div class="mx-auto" style="width: 200px;">
+    <%= paginate @items %>
   </div>
 </div>
-<!--< paginate >-->
