注文一覧画面作成完了

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -25,7 +25,8 @@
 					<div class='row'>
 						<p class="mr-2"><%= f.radio_button(:selected_address, 0, checked: true) %></p>
 						<p><%= f.label :ご自身の住所 %></br>
-						<%= current_customer.address %></p>
+						〒<%= current_customer.postal_code %> <%= current_customer.address %></br>
+						<%= current_customer.last_name %><%= current_customer.first_name %></p>
 					</div>
 
 					<!--登録先住所から選択-->
