--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <td>
       <tr><%= @order.created_at %></tr>
-      <tr><%= @order.postal_code %><%= @order.address %><%= @order.name %></tr>
+      <tr>〒<%= @order.postal_code %><%= @order.address %><%= @order.name %></tr>
       <tr><%= @order.payment_method %></tr>
       <tr><%= @order.status %></tr>
     </td>
