--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -13,9 +13,13 @@
   <tbody>
     <% @orders.each do |order| %>
     <tr>
-      <td><%= order.created_at %></td>
-      <td><%= order.postal_code %><%= order.address %><%= order.name %></td>
-      <td></td>
+      <td><%= order.created_at %> </td>
+      <td>〒<%= order.postal_code %> <%= order.address %> <%= order.name %></td>
+      <td>
+        <% order.order_details.each do |order_detail| %>
+        <%= order_detail.item.name %>
+        <% end %>
+      </td>
       <td><%= order.total_payment %></td>
       <td><%= order.status %></td>
       <td><%= link_to "表示する", order_path(order.id) %></td>
